--- a/BlazorBattles/Client/Pages/Build.razor
+++ b/BlazorBattles/Client/Pages/Build.razor
@@ -1,12 +1,40 @@
 ﻿@page "/build"
 
+@inject IUnitService UnitService
 @inject IBananaService BananaService
+@inject IToastService ToastService
 
 <h3>Build</h3>
-<button class="btn btn-primary" @onclick="() => EatBananas(10)">Eat Bananas</button>
+
+<div class="form-group">
+    <select @bind="selectedUnitId" class="form-control">
+        @foreach (var unit in UnitService.Units)
+        {
+            <option value="@unit.ID">@unit.Title // @unit.BananaCost Bananas</option>
+        }
+
+    </select>
+
+</div>
+
+<button class="btn btn-primary" @onclick="BuildUnit">Build</button>
+
 @code {
-    private void EatBananas(int amount)
+
+    int selectedUnitId = 1;
+    bool needMoreBananas = false;
+    public void BuildUnit()
     {
-        BananaService.EatBananas(amount);
+        var selectedUnit = UnitService.Units.FirstOrDefault(unit => unit.ID == selectedUnitId);
+
+        if(BananaService.Bananas < selectedUnit.BananaCost)
+        {
+            needMoreBananas = true;
+            ToastService.ShowError("Not enough bananas", ":(");
+            return;
+        }
+        BananaService.EatBananas(selectedUnit.BananaCost);
+        UnitService.AddUnit(selectedUnitId);
     }
+
 }
